--- a/Wallstreet/bazaar/templates/bazaar/buy.html
+++ b/Wallstreet/bazaar/templates/bazaar/buy.html
@@ -99,13 +99,16 @@
                     <h3 class="h6 text-uppercase mb-0" align="text-center">Buy</h3>
                   </div>
                   <div class="card-body">
-
-                    <form>
+                    {% if message %}
+                      <p style="color: red">{{message}}</p>
+                    {% endif %}
+                    <form action="/buy/" id="buyForm" method="post">
+                      {%csrf_token%}
                       <div class="form-group">
 
                             <div class="select">
                               <label class="form-control-label text-uppercase">Company</label>
-                              <select name="account" class="form-control" style="width: 100%">
+                              <select name="companyName" class="form-control" style="width: 100%" form="buyForm">
                                 {% for company in companies %}
                                 <option style="color: black">{{ company.name }}</option>
                                 {% endfor %}
@@ -115,11 +118,11 @@
                       </div>
                       <div class="form-group">
                         <label class="form-control-label text-uppercase">Quantity</label>
-                        <input type="text" placeholder="Quantity" class="form-control">
+                        <input type="text" placeholder="Quantity" class="form-control" name="quantity">
                       </div>
                       <div class="form-group">
                         <label class="form-control-label text-uppercase">Bid Price</label>
-                        <input type="text" placeholder="Bid Price" class="form-control">
+                        <input type="text" placeholder="Bid Price" class="form-control" name="price">
                       </div>
                       <div class="form-group">
                         <button type="submit" class="btn btn-primary">Submit</button>
