--- a/Wallstreet/bazaar/templates/bazaar/index.html
+++ b/Wallstreet/bazaar/templates/bazaar/index.html
@@ -162,7 +162,7 @@
             </div>
           </li>
           <li class="nav-item dropdown ml-auto"><a id="userInfo" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img src="{% static 'bazaar/img/navLogo.png' %}" alt="Jason Doe" style="max-width: 1.5rem;" class="img-fluid rounded-circle shadow"></a>
-            <div aria-labelledby="userInfo" class="dropdown-menu"><a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">Mark Stephen</strong><small>Valuation: </small></a>
+            <div aria-labelledby="userInfo" class="dropdown-menu"><a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">{{ profile.user.username }}</strong><small>Valuation: </small></a>
               <div class="dropdown-divider"></div><a href="#" class="dropdown-item">Transaction History</a>
               <div class="dropdown-divider"></div><a href="{%url 'bazaar:logoff'%}" class="dropdown-item">Logout</a>
             </div>
@@ -296,15 +296,14 @@
                             <div class="input-group-prepend">
                               <button type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-outline-primary dropdown-toggle"></button>
                               <div class="dropdown-menu">
-                                <a href="#" class="dropdown-item">Action</a>
-                                <a href="#" class="dropdown-item">Another action</a>
-                                <a href="#" class="dropdown-item">Something else here</a>
-                                <div role="separator" class="dropdown-divider"></div>
-                                <a href="#" class="dropdown-item">Separated link</a>
+                                {% for company in companies %}
+                                <a href="#" class="dropdown-item">{{ company.name }} - {{ company.sharePrice }}</a>
+                                {% endfor %}
                               </div>
                             </div>
                             <input type="text" aria-label="Text input with dropdown button" class="form-control" placeholder="Search...">
                           </div>
+                    <!--
                     <div class="d-flex justify-content-between align-items-start align-items-sm-center mb-4 flex-column flex-sm-row">
                       <div class="left d-flex align-items-center">
                         <div class="icon icon-lg shadow mr-3 text-white"><i class="fab fa-dropbox"></i></div>
@@ -316,6 +315,7 @@
                         <h5>Current Share Price - Rs.20</h5>
                       </div>
                     </div>
+                    -->
 
                   </div>
                 </div>
@@ -329,49 +329,18 @@
                   </div>
                   <div class="card-body">
 
+                    {% for share in userShareTable %}
                     <div class="d-flex justify-content-between align-items-start align-items-sm-center mb-4 flex-column flex-sm-row">
                       <div class="left d-flex align-items-center">
                         <div class="text">
-                          <h5 class="mb-0 d-flex align-items-center"> <span style="color: white">Dropbox Inc.</span><span class="dot dot-sm ml-2 bg-violet"></span></h5>
+                          <h5 class="mb-0 d-flex align-items-center"> <span style="color: white">{{ share.company }}</span><span class="dot dot-sm ml-2 bg-violet"></span></h5>
                         </div>
                       </div>
                       <div class="right ml-5 ml-sm-0 pl-3 pl-sm-0 text-violet">
-                        <h5>Number of Shares - 20</h5>
+                        <h5>Number of Shares - {{ share.bidShares }}</h5>
                       </div>
                     </div>
-                    <div class="d-flex justify-content-between align-items-start align-items-sm-center mb-4 flex-column flex-sm-row">
-                      <div class="left d-flex align-items-center">
-                        <div class="icon icon-lg shadow mr-3 text-gray"><i class="fab fa-apple"></i></div>
-                        <div class="text">
-                          <h6 class="mb-0 d-flex align-items-center"> <span>App Store.</span><span class="dot dot-sm ml-2 bg-green"></span></h6><small class="text-gray">Software cost</small>
-                        </div>
-                      </div>
-                      <div class="right ml-5 ml-sm-0 pl-3 pl-sm-0 text-green">
-                        <h5>Number of Shares - 20,Current Share Price - Rs.30</h5>
-                      </div>
-                    </div>
-                    <div class="d-flex justify-content-between align-items-start align-items-sm-center mb-4 flex-column flex-sm-row">
-                      <div class="left d-flex align-items-center">
-                        <div class="icon icon-lg shadow mr-3 text-gray"><i class="fas fa-shopping-basket"></i></div>
-                        <div class="text">
-                          <h6 class="mb-0 d-flex align-items-center"> <span>Supermarket.</span><span class="dot dot-sm ml-2 bg-blue"></span></h6><small class="text-gray">Shopping</small>
-                        </div>
-                      </div>
-                      <div class="right ml-5 ml-sm-0 pl-3 pl-sm-0 text-blue">
-                        <h5>-$20</h5>
-                      </div>
-                    </div>
-                    <div class="d-flex justify-content-between align-items-start align-items-sm-center mb-4 flex-column flex-sm-row">
-                      <div class="left d-flex align-items-center">
-                        <div class="icon icon-lg shadow mr-3 text-gray"><i class="fab fa-android"></i></div>
-                        <div class="text">
-                          <h6 class="mb-0 d-flex align-items-center"> <span>Play Store.</span><span class="dot dot-sm ml-2 bg-red"></span></h6><small class="text-gray">Software cost</small>
-                        </div>
-                      </div>
-                      <div class="right ml-5 ml-sm-0 pl-3 pl-sm-0 text-red">
-                        <h5>-$20</h5>
-                      </div>
-                    </div>
+                    {% endfor %}
                   </div>
                 </div>
               </div>
