--- a/Wallstreet/bazaar/templates/bazaar/login.html
+++ b/Wallstreet/bazaar/templates/bazaar/login.html
@@ -49,7 +49,11 @@
           <div class="col-lg-5 px-lg-4">
             <h1 class="text-base text-primary text-uppercase mb-4">Wallstreet</h1>
             <h2 style="color: white" class="mb-4">Welcome!</h2>
-
+            
+            {%if error%}
+              <p style="color: red">{{error}}</p>
+            {%endif%}
+            
             <form id="loginForm" method="post" action="" class="mt-4">
               {%csrf_token%}
               <div class="form-group mb-4">
@@ -57,12 +61,6 @@
               </div>
               <div class="form-group mb-4">
                 <input type="password" name="password" placeholder="Password" class="form-control border-0 shadow form-control-lg text-violet">
-              </div>
-              <div class="form-group mb-4">
-                <div class="custom-control custom-checkbox">
-                  <input id="customCheck1" type="checkbox" checked class="custom-control-input">
-                  <label style="color: white" for="customCheck1" class="custom-control-label">Remember Me</label>
-                </div>
               </div>
               <button type="submit" class="btn btn-primary shadow px-5">Log in</button>
             </form>
