--- a/Wallstreet/bazaar/templates/bazaar/news.html
+++ b/Wallstreet/bazaar/templates/bazaar/news.html
@@ -21,7 +21,8 @@
     <!-- Custom stylesheet - for your changes-->
     <link rel="stylesheet" href="{% static 'bazaar/css/custom.css'%}">
     <!-- Favicon-->
-    <link rel="shortcut icon" href="{% static 'bazaar/img/favicon.png?3'%}">
+    <link rel="shortcut icon" href="{% static 'bazaar/img/favicon.png'%}">
+
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
@@ -31,9 +32,9 @@
             background: url('{% static 'bazaar/img/1.png'%}');
 
             background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
 
           }
 
@@ -49,25 +50,25 @@
           <li class="nav-item dropdown mr-3"><a id="notifications" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle text-gray-400 px-1"><i class="fa fa-bell"></i><span class="notification-icon"></span></a>
             <div aria-labelledby="notifications" class="dropdown-menu"><a href="#" class="dropdown-item">
                 <div class="d-flex align-items-center">
-                  <div class="icon icon-sm bg-violet text-white"><i class="fab fa-twitter"></i></div>
+                  <div class="icon icon-sm bg-violet text-white"><i class="fa fa-bar-chart" aria-hidden="true"></i></div>
                   <div class="text ml-2">
-                    <p class="mb-0">Sensex</p>
+                    <p class="mb-0">Sensex - {{ sensex }}</p>
                   </div>
                 </div></a>
-                <a href="#" class="dropdown-item">
+                <a href="{% url 'bazaar:news' %}" class="dropdown-item">
                 <div class="d-flex align-items-center">
                   <div class="icon icon-sm bg-green text-white"><i class="fas fa-envelope"></i></div>
                   <div class="text ml-2">
                     <p class="mb-0">Latest News</p>
                   </div>
                 </div></a>
-              <div class="dropdown-divider"></div><a href="#" class="dropdown-item text-center"><small class="font-weight-bold headings-font-family text-uppercase">View News</small></a>
+              <div class="dropdown-divider"></div><a href="{% url 'bazaar:news' %}" class="dropdown-item text-center"><small class="font-weight-bold headings-font-family text-uppercase">View News</small></a>
             </div>
           </li>
-          <li class="nav-item dropdown ml-auto"><a id="userInfo" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img src="{% static 'bazaar/img/navLogo.png' %}" alt="" style="max-width: 2.5rem;" class="img-fluid rounded-circle shadow"></a>
-            <div aria-labelledby="userInfo" class="dropdown-menu"><a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">Mark Stephen</strong><small>Valuation: </small></a>
-              <div class="dropdown-divider"></div><a href="#" class="dropdown-item">Transaction History</a>
-              <div class="dropdown-divider"></div><a href="login.html" class="dropdown-item">Logout</a>
+          <li class="nav-item dropdown ml-auto"><a id="userInfo" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img src="{% static 'bazaar/img/navLogo.png' %}" alt="Jason Doe" style="max-width: 1.5rem;" class="img-fluid rounded-circle shadow"></a>
+            <div aria-labelledby="userInfo" class="dropdown-menu"><a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">{{ profile.user.username }}</strong><small>Valuation: {{ profile.cash }}</small></a>
+              <div class="dropdown-divider"></div><a href="{% url 'bazaar:transactions' %}" class="dropdown-item">Transaction History</a>
+              <div class="dropdown-divider"></div><a href="{%url 'bazaar:logoff'%}" class="dropdown-item">Logout</a>
             </div>
           </li>
         </ul>
@@ -100,78 +101,49 @@
                     <h6 class="text-uppercase mb-0">News</h6>
                   </div>
                   <div class="card-body">
+                    {% for n in news %}
                     <div class="row d-flex justify-content-around align-items-center p-3" style="width: 100%;border-bottom:3px solid rgba(0,0,0,0.3);border-radius: 15px;" >
                       <div class="col-lg-9">
                         <div class="form-group">
                             <div class="input-group-append">
-                              <big type="text" style="font-weight: 600">Tets News Lorem ipsum dolor sit amet, consectetur adipisicing elit. jdjdjdjd Tets News Lorem ipsum dolor sit amet, consectetur adipisicing elit. jdjdjdjd</big>
+                              {% if n == news.0 %}
+                                <big type="text" style="font-weight: 600">{{ n.title }}</big>
+                              {% else %}
+                                <strong type="text" style="...">{{ n.title }}</strong>
+                              {% endif %}
                             </div>
                           </div>
                       </div>
                       <div class="col-lg-3">
-                        <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-primary ml-auto">View News </button>
+                        <button type="button" id={{n.pk}} data-toggle="modal" data-target="#myModal{{n.pk}}" class="btn btn-primary ml-auto">View News </button>
                       </div>
-                    </div>
-                     <div class="row d-flex justify-content-around align-items-center p-3" style="width: 100%;border-bottom:3px solid rgba(0,0,0,0.3);border-radius: 15px;" >
-                      <div class="col-lg-9">
-                        <div class="form-group">
-                            <div class="input-group-append">
-                              <big type="text" style="">Tets News Lorem ipsum dolor sit amet, consectetur adipisicing elit. jdjdjdjd Tets News Lorem ipsum dolor sit amet, consectetur adipisicing elit. jdjdjdjd</big>
-                            </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-3">
-                        <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-primary ml-auto">View News </button>
-                      </div>
-                    </div>
-                     <div class="row d-flex justify-content-around align-items-center p-3" style="width: 100%;border-bottom:0.5px solid rgba(0,0,0,0.3);border-radius: 15px;" >
-                      <div class="col-lg-9">
-                        <div class="form-group">
-                            <div class="input-group-append">
-                              <big type="text" style="">Tets News Lorem ipsum dolor sit amet, consectetur adipisicing elit. jdjdjdjd Tets News Lorem ipsum dolor sit amet, consectetur adipisicing elit. jdjdjdjd</big>
-                            </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-3">
-                        <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-primary ml-auto">View News </button>
-                      </div>
-                    </div>
-                     <div class="row d-flex justify-content-around align-items-center p-3" style="width: 100%;border-bottom:0.5px solid rgba(0,0,0,0.3);border-radius: 15px;" >
-                      <div class="col-lg-9">
-                        <div class="form-group">
-                            <div class="input-group-append">
-                              <big type="text" style="">Tets News Lorem ipsum dolor sit amet, consectetur adipisicing elit. jdjdjdjd Tets News Lorem ipsum dolor sit amet, consectetur adipisicing elit. jdjdjdjd</big>
-                            </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-3">
-                        <button type="button" data-toggle="modal" data-target="#myModal" class="btn btn-primary ml-auto">View News </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
 
-            </div>
-            <!-- Modal-->
-            <div id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" class="modal fade text-left">
-              <div role="document" class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h4 id="exampleModalLabel" class="modal-title">News</h4>
-                    <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">×</span></button>
-                  </div>
-                  <div class="modal-body">
-                    <p>Lorem ipsum dolor sit amet consectetur.</p>
-
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" data-dismiss="modal" class="btn btn-secondary">Close</button>
-
+                      <!-- Modal-->
+                      <div id="myModal{{n.pk}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" class="modal fade text-left">
+                        <div role="document" class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h4 id="exampleModalLabel" class="modal-title">News</h4>
+                              <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">×</span></button>
+                            </div>
+                            <div class="modal-body">
+                              <p>{{ n.description }}</p>
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" data-dismiss="modal" class="btn btn-secondary">Close</button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    {% endfor %}
                   </div>
                 </div>
               </div>
             </div>
+
+            <!-- Modal removed from here -->
+
           </section>
         </div>
         <footer class="footer bg-white shadow align-self-end py-3 px-xl-5 w-100">
