--- a/Wallstreet/bazaar/templates/bazaar/leaderboard.html
+++ b/Wallstreet/bazaar/templates/bazaar/leaderboard.html
@@ -133,37 +133,19 @@
                     <table class="table table-striped table-hover card-text">
                       <thead>
                         <tr>
-                          <th>#</th>
                           <th>Rank</th>
                           <th>Username</th>
                           <th>Valuation</th>
                         </tr>
                       </thead>
                       <tbody>
-                        <tr>
-                          <th scope="row">1</th>
-                          <td>Mark</td>
-                          <td>Otto</td>
-                          <td>@mdo</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">2</th>
-                          <td>Jacob</td>
-                          <td>Thornton</td>
-                          <td>@fat</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">3</th>
-                          <td>Larry</td>
-                          <td>the Bird</td>
-                          <td>@twitter                            </td>
-                        </tr>
-                        <tr>
-                          <th scope="row">3</th>
-                          <td>Sam</td>
-                          <td>Nevoresky</td>
-                          <td>@facebook                            </td>
-                        </tr>
+                      {% for leaderboardentry in leaderboard %}
+                      <tr>
+                        <th scope="row">{{ leaderboardentry.profile.rank }}</th>
+                        <td>{{ leaderboardentry.profile.user.username }}</td>
+                        <td>{{ leaderboardentry.profile.cash }}</td>
+                      </tr>
+                      {% endfor %}
                       </tbody>
                     </table>
                   </div>
