--- a/Wallstreet/bazaar/templates/bazaar/buy.html
+++ b/Wallstreet/bazaar/templates/bazaar/buy.html
@@ -64,7 +64,7 @@
             </div>
           </li>
           <li class="nav-item dropdown ml-auto"><a id="userInfo" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img src="{% static 'bazaar/img/navLogo.png' %}" alt="Jason Doe" style="max-width: 1.5rem;" class="img-fluid rounded-circle shadow"></a>
-            <div aria-labelledby="userInfo" class="dropdown-menu"><a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">{{ profile.user.username }}</strong><small>Valuation: {{ profile.cash }}</small></a>
+            <div aria-labelledby="userInfo" class="dropdown-menu"><a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">{{ profile.user.username }}</strong><small>Rank: {{ profile.rank }}</small><br/><small>Valuation: {{ profile.cash }}</small></a>
               <div class="dropdown-divider"></div><a href="{% url 'bazaar:transactions' %}" class="dropdown-item">Transaction History</a>
               <div class="dropdown-divider"></div><a href="{%url 'bazaar:logoff'%}" class="dropdown-item">Logout</a>
             </div>
@@ -111,7 +111,7 @@
                               <label class="form-control-label text-uppercase">Company</label>
                               <select name="companyName" class="form-control" style="width: 100%" form="buyForm">
                                 {% for company in companies %}
-                                <option style="color: black">{{ company.name }}</option>
+                                <option style="color: black">{{ company.name }} - {{ company.sharePrice }}</option>
                                 {% endfor %}
                               </select>
                             </div>
