--- a/Wallstreet/bazaar/templates/bazaar/index.html
+++ b/Wallstreet/bazaar/templates/bazaar/index.html
@@ -162,7 +162,7 @@
             </div>
           </li>
           <li class="nav-item dropdown ml-auto"><a id="userInfo" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img src="{% static 'bazaar/img/navLogo.png' %}" alt="Jason Doe" style="max-width: 1.5rem;" class="img-fluid rounded-circle shadow"></a>
-            <div aria-labelledby="userInfo" class="dropdown-menu"><a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">{{ profile.user.username }}</strong><small>Valuation: {{ profile.cash }}</small></a>
+            <div aria-labelledby="userInfo" class="dropdown-menu"><a href="#" class="dropdown-item"><strong class="d-block text-uppercase headings-font-family">{{ profile.user.username }}</strong><small>Rank: {{ profile.rank }}</small><br/><small>Valuation: {{ profile.cash }}</small></a>
               <div class="dropdown-divider"></div><a href="{% url 'bazaar:transactions' %}" class="dropdown-item">Transaction History</a>
               <div class="dropdown-divider"></div><a href="{%url 'bazaar:logoff'%}" class="dropdown-item">Logout</a>
             </div>
@@ -293,30 +293,16 @@
                   </div>
                   <div class="card-body">
                    <div class="input-group mb-3">
-                            <div class="input-group-prepend">
-                              <button type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-outline-primary dropdown-toggle"></button>
-                              <div class="dropdown-menu">
-                                {% for company in companies %}
-                                <a href="#" class="dropdown-item">{{ company.name }} - {{ company.sharePrice }}</a>
-                                {% endfor %}
-                              </div>
-                            </div>
-                            <input type="text" aria-label="Text input with dropdown button" class="form-control" placeholder="Search...">
-                          </div>
-                    <!--
-                    <div class="d-flex justify-content-between align-items-start align-items-sm-center mb-4 flex-column flex-sm-row">
-                      <div class="left d-flex align-items-center">
-                        <div class="icon icon-lg shadow mr-3 text-white"><i class="fab fa-dropbox"></i></div>
-                        <div class="text">
-                          <h6 class="mb-0 d-flex align-items-center"> <span  style="color: white">Dropbox Inc.</span><span class="dot dot-sm ml-2 bg-violet"></span></h6>
+                      <div class="input-group-prepend">
+                        <button type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-outline-primary dropdown-toggle"></button>
+                        <div class="dropdown-menu">
+                          {% for company in companies %}
+                          <a href="#" class="dropdown-item">{{ company.name }} - {{ company.sharePrice }}</a>
+                          {% endfor %}
                         </div>
                       </div>
-                      <div class="right ml-5 ml-sm-0 pl-3 pl-sm-0 text-violet">
-                        <h5>Current Share Price - Rs.20</h5>
-                      </div>
+                      <input type="text" aria-label="Text input with dropdown button" class="form-control" placeholder="Search...">
                     </div>
-                    -->
-
                   </div>
                 </div>
               </div>
@@ -364,10 +350,6 @@
         </footer>
       </div>
     </div>
-
-
-
-
 
 
     <!-- JavaScript files-->
