News CSV Script added, Transaction History tables added, Start-Stop Market added, Leaaderboard timestamp in html

--- a/Wallstreet/bazaar/templates/bazaar/leaderboard.html
+++ b/Wallstreet/bazaar/templates/bazaar/leaderboard.html
@@ -130,6 +130,7 @@
                     <h6 class="text-uppercase mb-0">Leaderboard</h6>
                   </div>
                   <div class="card-body">
+                    <p style="text-align:right; font-size:10pt">Leader Board last updated at: {{update_time.day}}/{{update_time.month}}/{{update_time.year}} &nbsp;{{update_time.hour}}:{{update_time.minute}}</p>
                     <table class="table table-striped table-hover card-text">
                       <thead>
                         <tr>
